css/flowplayer.css
/* ... */
.flowplayer.fp-edgy .fp-airplay:before { content: "\e101"; }
.flowplayer.fp-edgy .fp-fullscreen:before { content: "\e102"; }
.flowplayer.fp-edgy .fp-checked:before { content: "\e103"; }
.flowplayer.fp-edgy .fp-embed:before { content: "\e104"; }
.flowplayer.fp-edgy .fp-chromecast:before { content: "\e105"; }
.flowplayer.fp-edgy .fp-email:before { content: "\e106"; }
.flowplayer.fp-edgy .fp-playbtn:before { content: "\e107"; }
.flowplayer.fp-edgy .fp-share:before { content: "\e109"; }
.flowplayer.fp-edgy .fp-share2:before, .flowplayer.fp-edgy .fp-facebook:before { content: "\e10a"; }
.flowplayer.fp-edgy .fp-twitter:before { content: "\e10c"; }
.flowplayer.fp-edgy .fp-volumebtn:before { content: "\e10b"; }
.flowplayer.fp-edgy .fp-volume-off:before { content: "\e10d"; }
.flowplayer.fp-edgy .fp-unload:before { content: "\e10f"; }
.flowplayer.fp-edgy .fp-prevbtn:before, .flowplayer.fp-edgy .fv-fp-prevbtn:after { content: "\e107"; }
.flowplayer.fp-edgy .fp-nextbtn:before, .flowplayer.fp-edgy .fv-fp-nextbtn:before { content: "\e107"; }
.flowplayer.fp-edgy.fp-outlined .fp-airplay:before, .flowplayer.fp-edgy.fp-minimal .fp-airplay:before { content: "\e301"; }
.flowplayer.fp-edgy.fp-outlined .fp-fullscreen:before, .flowplayer.fp-edgy.fp-minimal .fp-fullscreen:before { content: "\e302"; }
.flowplayer.fp-edgy.fp-outlined .fp-checked:before, .flowplayer.fp-edgy.fp-minimal .fp-checked:before { content: "\e303"; }
.flowplayer.fp-edgy.fp-outlined .fp-embed:before, .flowplayer.fp-edgy.fp-minimal .fp-embed:before { content: "\e304"; }
.flowplayer.fp-edgy.fp-outlined .fp-chromecast:before, .flowplayer.fp-edgy.fp-minimal .fp-chromecast:before { content: "\e305"; }
.flowplayer.fp-edgy.fp-outlined .fp-email:before, .flowplayer.fp-edgy.fp-minimal .fp-email:before { content: "\e306"; }
.flowplayer.fp-edgy.fp-outlined .fp-playbtn:before, .flowplayer.fp-edgy.fp-minimal .fp-playbtn:before { content: "\e307"; }
.flowplayer.fp-edgy.fp-outlined .fp-share:before, .flowplayer.fp-edgy.fp-minimal .fp-share:before { content: "\e309"; }
.flowplayer.fp-edgy.fp-outlined .fp-share2:before, .flowplayer.fp-edgy.fp-minimal .fp-share2:before,.flowplayer.fp-edgy.fp-outlined .fp-facebook:before, .flowplayer.fp-edgy.fp-minimal .fp-facebook:before { content: "\e30a"; }
.flowplayer.fp-edgy.fp-outlined .fp-twitter:before, .flowplayer.fp-edgy.fp-minimal .fp-twitter:before { content: "\e30c"; }
.flowplayer.fp-edgy.fp-outlined .fp-volumebtn:before, .flowplayer.fp-edgy.fp-minimal .fp-volumebtn:before { content: "\e30b"; }
.flowplayer.fp-edgy.fp-outlined .fp-volume-off:before, .flowplayer.fp-edgy.fp-minimal .fp-volume-off:before { content: "\e30d"; }
.flowplayer.fp-edgy.fp-outlined .fp-unload:before, .flowplayer.fp-edgy.fp-minimal .fp-unload:before { content: "\e30f"; }
.flowplayer.fp-edgy.fp-outlined .fp-prevbtn:before, .flowplayer.fp-edgy.fp-minimal .fp-prevbtn:before, .flowplayer.fp-outlined .fv-fp-prevbtn:before, .flowplayer.fp-edgy.fp-minimal .fv-fp-prevbtn:before { content: "\e311"; }
.flowplayer.fp-edgy.fp-outlined .fp-nextbtn:before, .flowplayer.fp-edgy.fp-minimal .fp-nextbtn:before, .flowplayer.fp-outlined .fv-fp-nextbtn:before, .flowplayer.fp-edgy.fp-minimal .fv-fp-nextbtn:before { content: "\e312"; }
.flowplayer.fp-outlined .fv-fp-prevbtn:after {display: none;}


.flowplayer.no-svg .fp-ui .fp-play.fp-visible {
  /*background-color: #ccc;*/
  position: absolute;
  font-size: 2.5em;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 6em;
  height: 6em;
  max-height: 38%;}
  .flowplayer.no-svg .fp-ui .fp-play.fp-visible svg {
    display: none; }
  .flowplayer.no-svg .fp-ui .fp-play.fp-visible .fp-playbtn {
    display: block;
    -webkit-filter: drop-shadow( 0 0 4px #aaa );
  	filter: drop-shadow( 0 0 4px #aaa )	}
.flowplayer.no-svg .fp-play.fp-visible .fp-icon:before {
	font-size: inherit;
}
.flowplayer .fp-player, .flowplayer .fp-ui, .flowplayer .fp-header, .flowplayer .fp-captions, .flowplayer .fp-controls {
  position: absolute;
  width: 100%; }

.flowplayer {
  font-family: avenir, sans-serif;
  font-size: 16px;
  position: relative;
  max-height: 100%;
  overflow-x: hidden;
  overflow-y: visible;
  border-radius: .24em;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  zoom: 1 !important;
  width: 100%;
  display: inline-block; }
  .flowplayer .fp-hidden {
    display: none; }
  .flowplayer .fp-shown {
    display: block !important; }
  .flowplayer * {
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box; }
  .flowplayer.is-ready:not(.is-poster) {
    background-color: #333; }
  .flowplayer .fp-engine {
    display: block;
    width: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100% !important;
    width: 100%; }
  .flowplayer video.fp-engine:not(.native-subtitles)::-webkit-media-controls {
    display: none !important; }
  .flowplayer .fp-player {
    position: absolute;
    bottom: 0;
    top: 0; }
  .flowplayer .fp-waiting {
    display: none; }
    .flowplayer .fp-waiting p {
      filter: alpha(opacity=0);
      opacity: 0;
      color: #ccc;
      font-weight: bold; }
  .flowplayer .fp-ui {
    height: 100%;
    top: 0;
    background-image: none;
    -webkit-transition: background-image .1s;
    transition: background-image .1s;
    text-align: center;
    cursor: pointer;
    color: #fff; }
    .flowplayer .fp-ui a, .flowplayer .fp-ui strong, .flowplayer .fp-ui a:before {
      color: inherit !important;
      font-style: normal !important;
      text-decoration: none !important; }
    .flowplayer .fp-ui > * {
      -webkit-transition: opacity .1s;
      transition: opacity .1s;
      filter: alpha(opacity=0);
      opacity: 0; }
/* ... */

